tree-sitter-kama/grammar.js
    source_file: ($) =>
      seq(
        optional($.file_gate),
        optional($.import_declaration),
        optional($.export_manifest),
        repeat($._top_level_declaration),
      ),

    // THE FILE GATE — `file @compileFor(!ARCH_WASM32);`, kama.y's `file_directive_opt`. A unit's FIRST
    // line, ahead of `import`, gating the whole file the way `@compileFor` gates one declaration.
    // Leading `file` rather than attribute-first because at THIS position the attribute-first spelling
    // costs the compiler's grammar two conflicts (the deciding token sits past the whole attribute list);
    // one token of lookahead is what makes it free here too.
    //
    // The payload is a plain `attribute_list`, exactly as in kama.y — restricting it to `@compileFor` is
    // the compiler's job, so a file gate carrying `@noheap` PARSES here and is rejected there. That
    // asymmetry is deliberate and matches how every other semantic rule is split.
    file_gate: ($) => seq('file', $.attribute_list, ';'),


    // ONE `import { … };` block per file, exactly as there is one `export { … };`. Every entry names a
    // SYMBOL — `a::b::X` is symbol `X` of module `a::b`, always — so there is no module-vs-symbol
    // ambiguity and the `::{` two-token lookahead that needed a declared conflict is gone with it.
    import_declaration: ($) =>
      seq(
        'import',
        '{',
        commaSep1($.import_entry),
        optional(','),
        '}',
        ';',
      ),

    import_entry: ($) =>
      seq(
        field('path', $.import_path),
        optional(seq('as', field('alias', $.identifier))),
      ),

    import_path: ($) => seq($.identifier, repeat(seq('::', $.identifier))),

    export_manifest: ($) => seq('export', '{', commaSep1($.identifier), '}', ';'),

    _top_level_declaration: ($) =>
      choice(
        $.function_declaration,
        $.extern_declaration,
        $.extern_const_declaration,
        $.fnptr_declaration,
        $.type_declaration,
        $.adapter_declaration,
        $.enum_declaration,
        $.module_variable_declaration,
        $.comptime_assert_statement,
      ),

    // ── Type declarations ───────────────────────────────────────────────────────────────────────────
    // kama.y:248. `type <modifiers> <kind> Name ...` where <kind> is an ORDINARY IDENTIFIER. See the
    // header note; `type_kind` exists so a query never has to rely on pattern ordering to colour it.
    type_declaration: ($) =>
      seq(
        optional($.attribute_list),
        'type',
        // kama.y marked_type_declaration: `type expose value V` — a C layout kama owns (KR-52). `expose` is only
        // ever directly after `type`, never in the member `modifier` set, where it stays a parse error.
        optional($.function_modifier),
        repeat($.modifier),
        field('kind', $.type_kind),
        field('name', $.type_declaration_head),
        optional($.for_kinds),
        optional($.class_base),
        field('body', $.class_body),
        optional(';'),
      ),

    // `value` / `resource` / `view` / `contract` / `adapter` — contextual, never reserved.
    type_kind: ($) => $.identifier,

    // `type adapter <int8, Uuid, Optional> implements C { … <int8> { … } }` — a type's conformance to C,
    // written outside its declaration (kama.y `marked_adapter_declaration`). It diverges from
    // `type_declaration` one token after the kind word: `<` rather than a NAME. The targets are TYPES.
    for_kinds: ($) => seq('for', commaSep1($.kind_name)),
    kind_name: ($) => $.identifier,

    // kama.y:277 — the DECLARATION-site head, whose params can carry bounds. Distinct from the USE-site
    // `type_arguments`, which cannot.
    type_declaration_head: ($) =>
      seq(
        field('name', $.identifier),
        optional($.type_parameters),
        optional($.comptime_parameters),
      ),

    type_parameters: ($) => seq('<', commaSep1($.type_parameter), '>'),

    type_parameter: ($) =>
      choice(
        // `T is This` — an IDENTITY constraint pinning the parameter to the implementing type. Kept out
        // of `bound_list` because a bound holds a CONTRACT. `is` is anonymous here rather than an
        // `$.identifier`: the compiler rejects any other word in this slot as a PARSE error, so a
        // permissive rule would make tree-sitter accept what the compiler will not. Listed first so
        // `T is …` cannot reduce as name-then-default.
        seq(
          field('name', $.identifier),
          'is',
          field('pin', $.type_name),
        ),
        seq(
          field('name', $.identifier),
          optional(seq(':', field('bounds', $.bound_list))),
          optional($._type_parameter_default),
        ),
      ),

    // kama.y `comptime_params_opt` — compile-time VALUE parameters, `comptime(int32 N)`. Their own
    // trailing list: `<…>` holds types only. On a function it comes after the runtime parameter list.
    _type_parameter_default: ($) => seq('=', $._type_argument),

    class_base: ($) =>
      choice(
        seq('extends', field('superclass', $.type_name)),
        seq('implements', commaSep1($.implements_entry)),
        seq(
          'extends',
          field('superclass', $.type_name),
          'implements',
          commaSep1($.implements_entry),
        ),
      ),

    // kama.y:906 — an entry may carry a contract PARAMETER, `implements Copyable(bare: give)`.
    implements_entry: ($) =>
      seq(
        $.type_name,
        optional(
          seq('(', field('name', $.identifier), ':', $.handoff_default, ')'),
        ),
        optional($.when_clause),
      ),

    // `(bare: give)` — followed by `)`, so the word is an identifier here (see `externals`); the compiler checks it
    // is one of the two.
    handoff_default: ($) => $.identifier,

    // kama.y:917 — SQUARE brackets, mandatory. `default` is a legal structural bound.
    when_clause: ($) => seq('when', '[', commaSep1($.when_condition), ']'),

    when_condition: ($) =>
      seq(
        field('parameter', $.identifier),
        ':',
        field('bound', choice($.type_name, 'default')),
      ),

    // ── Enums ───────────────────────────────────────────────────────────────────────────────────────
    // `type enum Name<T> : IntType implements C { A, B(payload…); …members… }`. An enum is a type kind
    // like any other, so it takes the `type` marker and a `class_base`. The marker is MANDATORY (GOALS #3c:
    // every declaration is `type <kind> Name`); bare `enum X` is a parse error in kama.y too.
    enum_declaration: ($) =>
      seq(
        optional($.attribute_list),
        'type',
        optional($.function_modifier),   // `type expose enum` (KR-55), directly after `type` as on a value
        repeat($.modifier),
        'enum',
        field('name', $.type_declaration_head),
        optional(seq(':', field('underlying', $.primitive_type))),
        optional(field('base', $.class_base)),
        field('body', $.enum_body),
        optional(';'),
      ),

    // A trailing comma is allowed. A `;` after the variants opens an ordinary class-member list — the
    // methods that satisfy the declared contract. The separator is MANDATORY: without it a bare `Foo`
    // variant and a `Foo bar;` field are indistinguishable at one token of lookahead (kama.y says the
    // same, which is why the four alternatives there are spelled out rather than folded into an `_opt`).
    enum_body: ($) =>
      seq(
        '{',
        optional(
          seq(
            commaSep1($.enum_member),
            optional(','),
            optional(seq(';', repeat($._class_member))),
          ),
        ),
        '}',
      ),

    enum_member: ($) =>
      seq(
        field('name', $.identifier),
        optional(
          choice(
            seq('=', field('value', $._expression)),
            // A tagged-union payload is a PARAMETER LIST — typed, named fields — not bare types.
            field('payload', $.parameter_list),
          ),
        ),
      ),

    // ── Module variables ────────────────────────────────────────────────────────────────────────────
    module_variable_declaration: ($) =>
      seq(
        optional($.attribute_list),
        choice(
          seq('static', optional($.hardware), field('type', $._type)),
          seq('comptime', field('type', $._type)),
        ),
        commaSep1($.variable_declarator),
        ';',
      ),

    function_declaration: ($) =>
      seq(
        optional($.attribute_list),
        optional($.function_modifier),
        optional('unsafe'),
        optional('comptime'),
        'fn',
        field('return_type', $._function_return_type),
        field('name', $.identifier),
        optional($.type_parameters),
        field('parameters', $.parameter_list),
        // A function's compile-time values are its LAST list — after the runtime one.
        optional($.comptime_parameters),
        field('body', $.block),
      ),

    // `expose` only — free functions. NOT part of the member `modifier` set.
    function_modifier: ($) => 'expose',

    _function_return_type: ($) =>
      choice($._type, $.void_type, $.reference_return_type),

    void_type: ($) => 'void',
    // kama.y — `ref T` (a writable place) or `const ref T` (a read-only place); the const comes first,
    // matching the parameter spelling `const ref T x`.
    reference_return_type: ($) => seq(optional('const'), 'ref', $._type),

    // `extern "<stdio.h>";` and `extern fn T name(...);`
    // Both arms take an `attribute_list`, mirroring kama.y's `attribute_list plain_function_declaration`
    // hoist: `@compileFor(FLAG)` gates a backend's own C header.
    extern_declaration: ($) =>
      choice(
        seq(optional($.attribute_list), 'extern', field('header', $.string_literal), ';'),
        seq(
          optional($.attribute_list),
          'extern',
          'fn',
          field('return_type', $._function_return_type),
          field('name', $.identifier),
          field('parameters', $.parameter_list),
          ';',
        ),
      ),

    // kama.y — `extern const T NAME;`: a C constant a header defines, bound by name with no value (KR-56).
    extern_const_declaration: ($) =>
      seq(
        optional($.attribute_list),
        'extern',
        'const',
        field('type', $._type),
        field('name', $.identifier),
        ';',
      ),

    parameter_list: ($) => seq('(', commaSep($.parameter), ')'),

    // kama.y:384 — no default values, no varargs.
    parameter: ($) =>
      seq(
        optional('const'),
        optional($.hardware),
        optional(field('mode', choice('ref', 'out'))),
        field('type', $._type),
        field('name', $._name),
      ),

    // ── Class body ──────────────────────────────────────────────────────────────────────────────────
    class_body: ($) => seq('{', repeat($._class_member), '}'),

    _class_member: ($) =>
      choice(
        $.constant_declaration,
        $.field_declaration,
        $.method_declaration,
        $.operator_declaration,
        $.constructor_declaration,
        $.destructor_declaration,
        $.friend_declaration,
        $.comptime_assert_statement,
      ),

    field_declaration: ($) =>
      seq(
        optional($.attribute_list),
        repeat($.modifier),
        field('type', $._type),
        commaSep1($.variable_declarator),
        ';',
      ),

    // Every member kind takes an `attribute_list` (kama.y: `attribute_list plain_class_member`), which
    // is what lets `@noheap` mark a real-time entry point written as a method rather than a free `fn`.
    method_declaration: ($) =>
      seq(
        optional($.attribute_list),
        repeat($.modifier),
        choice(seq('comptime', 'fn'), seq(optional('const'), 'fn')),
        field('return_type', $._function_return_type),
        field('name', $.method_name),
        field('parameters', $.parameter_list),
        optional($.when_clause),
        // A contract method has NO body — just `;`.
        field('body', choice($.block, ';')),
      ),

    // kama.y:980 — `copy`/`give` are hand-off markers only in EXPRESSION position, so they may also name a
    // member. This is what lets a `resource` opt into `Copyable` with a method literally named `copy`.
    // A named node, so a query colours it as a function rather than a keyword without pattern ordering.
    method_name: ($) => choice($.identifier, $._slot_name, $._file_name),   // `copy`/`give`/`truncate` are identifiers here

    operator_declaration: ($) =>
      seq(
        optional($.attribute_list),
        repeat($.modifier),
        choice(
          // `ref T operator[](usize i)` / `const ref T operator[](isize i)` — the place-returning
          // index operator, writable or read-only.
          seq(
            optional('const'),
            'ref',
            field('return_type', $._type),
            'operator',
            field('operator', $.index_operator),
            field('parameters', $.parameter_list),
          ),
          seq(
            field('return_type', $._type),
            'operator',
            field('operator', $.overloadable_operator),
            field('parameters', $.parameter_list),
          ),
        ),
        field('body', choice($.block, ';')),
      ),

    index_operator: ($) => seq('[', ']'),
    overloadable_operator: ($) => choice(...OVERLOADABLE_OPERATORS),

    constructor_declaration: ($) =>
      seq(
        optional($.attribute_list),
        repeat($.modifier),
        choice(
          // The classic form: `Name(params) : base(args) { }`
          seq(
            field('name', $.identifier),
            field('parameters', $.parameter_list),
            optional($.constructor_initializer),
            field('body', choice($.block, ';')),
          ),
          // The NAMED form: `ctor make(params) { }` / `ctor Result<This,E> make(params) { }`
          seq(
            'ctor',
            optional(field('return_type', $._type)),
            field('name', $.method_name),
            field('parameters', $.parameter_list),
            optional($.when_clause),
            field('body', choice($.block, ';')),
          ),
        ),
      ),

    constructor_initializer: ($) => seq(':', 'base', $.argument_list),

    destructor_declaration: ($) =>
      seq(
        optional($.attribute_list),
        repeat($.modifier),
        '~',
        field('name', $.identifier),
        '(',
        ')',
        field('body', $.block),
      ),

    // kama.y:309 — SQUARE brackets, and `[...]` means "all privates".
    friend_declaration: ($) =>
      seq(
        'friend',
        field('type', $.type_name),
        '[',
        choice(commaSep1($._friend_member_name), '...'),
        ']',
        ';',
      ),

    // A granted member is named the way it is DECLARED, so this is `method_name`'s set plus the operator
    // forms (KR-80). It took a bare identifier, which made the `copy` ctor and every operator ungrantable
    // — a parse error that even told the reader `copy` CAN name a binding.
    //
    // HIDDEN (`_`-prefixed), so a plain name still appears as `(identifier)` directly under
    // `friend_declaration` rather than gaining a wrapper node: the list is a list of names, and the tree
    // should say so. The contextual keywords are plain literals for the same reason they are in
    // `method_name`.
    _friend_member_name: ($) =>
      choice(
        $.identifier,
        $._slot_name,
        $._file_name,
        'type',
        seq('operator', $.overloadable_operator),
        seq('operator', '[', ']'),
      ),

    // `virtual(maxDepth: 2)` / `abstract(maxDepth: 1)` — the extension budget, kama.y `modifier`. It
    // reuses `argument_list` there for the same reason it does here: the spelling is kama's ordinary
    // named-argument one, and the emitter (not the grammar) checks the name and the value.
