tree-sitter-kama/test/corpus/declarations.txt
================================================================================
The contextual kind word gets its own node
================================================================================

type value Point
{
    int32 x;
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (field_declaration
        (primitive_type)
        (variable_declarator
          (identifier))))))

================================================================================
Modifiers sit between type and the kind word
================================================================================

type immutable value Config
{
    int32 n;
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (modifier)
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (field_declaration
        (primitive_type)
        (variable_declarator
          (identifier))))))

================================================================================
expose sits directly after type and publishes a C layout
================================================================================

@linkName("FrameStats")
type expose value Stats
{
    public int32 frames;
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (attribute_list
      (attribute
        (identifier)
        (attribute_argument
          (string_literal
            (string_content)))))
    (function_modifier)
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (field_declaration
        (modifier)
        (primitive_type)
        (variable_declarator
          (identifier))))))

================================================================================
expose and extern mark who owns an enum's values
================================================================================

type expose enum Kind : int32 { Dot = 1 }
type extern enum VkFormat : int32 { VK_FORMAT_UNDEFINED }

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (function_modifier)
    (type_declaration_head
      (identifier))
    (primitive_type)
    (enum_body
      (enum_member
        (identifier)
        (integer_literal))))
  (enum_declaration
    (modifier)
    (type_declaration_head
      (identifier))
    (primitive_type)
    (enum_body
      (enum_member
        (identifier)))))

================================================================================
A contract declares which kinds it is for
================================================================================

type contract Drawable for value, resource
{
    fn void draw();
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (for_kinds
      (kind_name
        (identifier))
      (kind_name
        (identifier)))
    (class_body
      (method_declaration
        (void_type)
        (method_name
          (identifier))
        (parameter_list)))))

================================================================================
value is still an ordinary identifier
================================================================================

fn void main()
{
    int32 value = 1;
    int32 resource = 2;
    int32 contract = 3;
    int32 view = 4;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (void_type)
    (identifier)
    (parameter_list)
    (block
      (local_variable_declaration
        (primitive_type)
        (variable_declarator
          (identifier)
          (integer_literal)))
      (local_variable_declaration
        (primitive_type)
        (variable_declarator
          (identifier)
          (integer_literal)))
      (local_variable_declaration
        (primitive_type)
        (variable_declarator
          (identifier)
          (integer_literal)))
      (local_variable_declaration
        (primitive_type)
        (variable_declarator
          (identifier)
          (integer_literal))))))

================================================================================
The header order is imports then export, and every entry names a symbol
================================================================================

import {
    c::d::E,
    f::G as H,
    I,
};
export { M };

fn void main() { }

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (import_entry
      (import_path
        (identifier)
        (identifier)
        (identifier)))
    (import_entry
      (import_path
        (identifier)
        (identifier))
      (identifier))
    (import_entry
      (import_path
        (identifier))))
  (export_manifest
    (identifier))
  (function_declaration
    (void_type)
    (identifier)
    (parameter_list)
    (block)))

================================================================================
copy and give may name a method
================================================================================

type resource Buffer implements Copyable(bare: give)
{
    fn Buffer copy() { return this; }
    fn void give() { }
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_base
      (implements_entry
        (type_name
          (identifier))
        (identifier)
        (handoff_default
          (identifier))))
    (class_body
      (method_declaration
        (type_name
          (identifier))
        (method_name
          (identifier))
        (parameter_list)
        (block
          (return_statement
            (this_expression))))
      (method_declaration
        (void_type)
        (method_name
          (identifier))
        (parameter_list)
        (block)))))

================================================================================
Enum members carry a typed named payload and allow a trailing comma
================================================================================

type enum Shape : int32
{
    Empty,
    Circle(float64 r),
    Rect(float64 w, float64 h),
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (type_declaration_head
      (identifier))
    (primitive_type)
    (enum_body
      (enum_member
        (identifier))
      (enum_member
        (identifier)
        (parameter_list
          (parameter
            (primitive_type)
            (identifier))))
      (enum_member
        (identifier)
        (parameter_list
          (parameter
            (primitive_type)
            (identifier))
          (parameter
            (primitive_type)
            (identifier)))))))

================================================================================
Attributes including compileFor negation
================================================================================

@generate(Serializable, Formattable)
type value Rec
{
    @field(name: "x") int32 x;
}

@compileFor(!RELEASE)
fn void debugOnly() { }

@section(".isr_vector")
static int32 vec;

@packed
type value Reg { uint8 a; }

@align(16)
type value Line { uint64 x; }

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (attribute_list
      (attribute
        (identifier)
        (attribute_argument
          (identifier))
        (attribute_argument
          (identifier))))
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (field_declaration
        (attribute_list
          (attribute
            (identifier)
            (attribute_argument
              (identifier)
              (string_literal
                (string_content)))))
        (primitive_type)
        (variable_declarator
          (identifier)))))
  (function_declaration
    (attribute_list
      (attribute
        (identifier)
        (attribute_argument
          (identifier))))
    (void_type)
    (identifier)
    (parameter_list)
    (block))
  (module_variable_declaration
    (attribute_list
      (attribute
        (identifier)
        (attribute_argument
          (string_literal
            (string_content)))))
    (primitive_type)
    (variable_declarator
      (identifier)))
  (type_declaration
    (attribute_list
      (attribute
        (identifier)))
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (field_declaration
        (primitive_type)
        (variable_declarator
          (identifier)))))
  (type_declaration
    (attribute_list
      (attribute
        (identifier)
        (attribute_argument
          (integer_literal))))
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (field_declaration
        (primitive_type)
        (variable_declarator
          (identifier))))))

================================================================================
when clauses and friend use SQUARE brackets
================================================================================

type value Holder<T>
{
    friend Other[a, b];
    friend Everything[...];
    fn void each() when [T: Copyable] { }
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier)
      (type_parameters
        (type_parameter
          (identifier))))
    (class_body
      (friend_declaration
        (type_name
          (identifier))
        (identifier)
        (identifier))
      (friend_declaration
        (type_name
          (identifier)))
      (method_declaration
        (void_type)
        (method_name
          (identifier))
        (parameter_list)
        (when_clause
          (when_condition
            (identifier)
            (type_name
              (identifier))))
        (block)))))

================================================================================
Both constructor forms plus destructor and operators
================================================================================

type resource Vec2
{
    Vec2(int32 a) : base(n: a) { }
    ctor make() { }
    ctor Result<This, Error> tryMake() { }
    ~Vec2() { }
    Vec2 operator+(Vec2 rhs) { return rhs; }
    ref int32 operator[](int32 i) { return this.x; }
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (constructor_declaration
        (identifier)
        (parameter_list
          (parameter
            (primitive_type)
            (identifier)))
        (constructor_initializer
          (argument_list
            (argument
              (identifier)
              (identifier))))
        (block))
      (constructor_declaration
        (method_name
          (identifier))
        (parameter_list)
        (block))
      (constructor_declaration
        (type_name
          (identifier)
          (type_arguments
            (type_name
              (identifier))
            (type_name
              (identifier))))
        (method_name
          (identifier))
        (parameter_list)
        (block))
      (destructor_declaration
        (identifier)
        (block))
      (operator_declaration
        (type_name
          (identifier))
        (overloadable_operator)
        (parameter_list
          (parameter
            (type_name
              (identifier))
            (identifier)))
        (block
          (return_statement
            (identifier))))
      (operator_declaration
        (primitive_type)
        (index_operator)
        (parameter_list
          (parameter
            (primitive_type)
            (identifier)))
        (block
          (return_statement
            (field_expression
              (this_expression)
              (identifier))))))))

================================================================================
The extension budget on a virtual/abstract class
================================================================================

type virtual(maxDepth: 2) resource Root { public ctor make() { } }
type abstract(maxDepth: 1) resource Mid extends Root { public ctor make() { } }

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (modifier
      (argument_list
        (argument
          (identifier)
          (integer_literal))))
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (constructor_declaration
        (modifier)
        (method_name
          (identifier))
        (parameter_list)
        (block))))
  (type_declaration
    (modifier
      (argument_list
        (argument
          (identifier)
          (integer_literal))))
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_base
      (type_name
        (identifier)))
    (class_body
      (constructor_declaration
        (modifier)
        (method_name
          (identifier))
        (parameter_list)
        (block)))))

================================================================================
An enum declares conformance inline and carries members after the `;`
================================================================================

type enum IoError : uint8 implements Error
{
    NotFound,
    Denied;

    public fn string message() { return "x"; }
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (type_declaration_head
      (identifier))
    (primitive_type)
    (class_base
      (implements_entry
        (type_name
          (identifier))))
    (enum_body
      (enum_member
        (identifier))
      (enum_member
        (identifier))
      (method_declaration
        (modifier)
        (primitive_type)
        (method_name
          (identifier))
        (parameter_list)
        (block
          (return_statement
            (string_literal
              (string_content))))))))

================================================================================
A `type intrinsic` set, with a shared body and a per-target section
================================================================================

type intrinsic <int8, int16> implements Tagged
{
    public fn int32 scale() { return 2; }

    <int8> { public fn int32 tag() { return 1; } }
}

--------------------------------------------------------------------------------

(source_file
  (intrinsic_declaration
    (type_kind
      (identifier))
    (intrinsic_targets
      (primitive_type)
      (primitive_type))
    (class_base
      (implements_entry
        (type_name
          (identifier))))
    (intrinsic_body
      (method_declaration
        (modifier)
        (primitive_type)
        (method_name
          (identifier))
        (parameter_list)
        (block
          (return_statement
            (integer_literal))))
      (intrinsic_section
        (intrinsic_targets
          (primitive_type))
        (method_declaration
          (modifier)
          (primitive_type)
          (method_name
            (identifier))
          (parameter_list)
          (block
            (return_statement
              (integer_literal))))))))

================================================================================
The file gate is a unit's first line, ahead of the import block
================================================================================

file @compileFor(!ARCH_WASM32);

import { std::io::print };

fn int32 main() { return 0; }

--------------------------------------------------------------------------------

(source_file
  (file_gate
    (attribute_list
      (attribute
        (identifier)
        (attribute_argument
          (identifier)))))
  (import_declaration
    (import_entry
      (import_path
        (identifier)
        (identifier)
        (identifier))))
  (function_declaration
    (primitive_type)
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (integer_literal)))))

================================================================================
`file` still names a binding everywhere else
================================================================================

fn int32 main()
{
    isize file = 4;
    return cast<int32>(file + h.file);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (primitive_type)
    (identifier)
    (parameter_list)
    (block
      (local_variable_declaration
        (primitive_type)
        (variable_declarator
          (identifier)
          (integer_literal)))
      (return_statement
        (cast_expression
          (primitive_type)
          (binary_expression
            (identifier)
            (field_expression
              (identifier)
              (identifier))))))))

================================================================================
A place-return is `ref T` or the read-only `const ref T`, on a method, an operator and a free function
================================================================================

type value Cell
{
    int32 n;
    public fn ref int32 place() { return this.n; }
    public const fn const ref int32 view() { return this.n; }
    public const ref int32 operator[](isize i) { return this.n; }
}
fn const ref int32 pick(const ref Cell c) { return c.view(); }

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (field_declaration
        (primitive_type)
        (variable_declarator
          (identifier)))
      (method_declaration
        (modifier)
        (reference_return_type
          (primitive_type))
        (method_name
          (identifier))
        (parameter_list)
        (block
          (return_statement
            (field_expression
              (this_expression)
              (identifier)))))
      (method_declaration
        (modifier)
        (reference_return_type
          (primitive_type))
        (method_name
          (identifier))
        (parameter_list)
        (block
          (return_statement
            (field_expression
              (this_expression)
              (identifier)))))
      (operator_declaration
        (modifier)
        (primitive_type)
        (index_operator)
        (parameter_list
          (parameter
            (primitive_type)
            (identifier)))
        (block
          (return_statement
            (field_expression
              (this_expression)
              (identifier)))))))
  (function_declaration
    (reference_return_type
      (primitive_type))
    (identifier)
    (parameter_list
      (parameter
        (type_name
          (identifier))
        (identifier)))
    (block
      (return_statement
        (call_expression
          (field_expression
            (identifier)
            (identifier))
          (argument_list))))))

================================================================================
The C ABI elements: cchar as a raw-pointer element, clong and culong as values
================================================================================

extern fn clong strtol(UnsafeConstPtr<cchar> s, UnsafePtr end, int32 radix);

fn void main()
{
    clong a = 1;
    culong b = 2;
}

--------------------------------------------------------------------------------

(source_file
  (extern_declaration
    (primitive_type)
    (identifier)
    (parameter_list
      (parameter
        (type_name
          (identifier)
          (type_arguments
            (primitive_type)))
        (identifier))
      (parameter
        (type_name
          (identifier))
        (identifier))
      (parameter
        (primitive_type)
        (identifier))))
  (function_declaration
    (void_type)
    (identifier)
    (parameter_list)
    (block
      (local_variable_declaration
        (primitive_type)
        (variable_declarator
          (identifier)
          (integer_literal)))
      (local_variable_declaration
        (primitive_type)
        (variable_declarator
          (identifier)
          (integer_literal))))))

================================================================================
extern const binds a C constant by name, with no value
================================================================================

extern "webgpu.h";
@linkName("GLFW_KEY_ESCAPE") extern const int32 escapeKey;
extern const uint64 WGPUBufferUsage_Uniform;

--------------------------------------------------------------------------------

(source_file
  (extern_declaration
    (string_literal
      (string_content)))
  (extern_const_declaration
    (attribute_list
      (attribute
        (identifier)
        (attribute_argument
          (string_literal
            (string_content)))))
    (primitive_type)
    (identifier))
  (extern_const_declaration
    (primitive_type)
    (identifier)))

================================================================================
A friend member list names operators and the copy ctor
================================================================================

type value Vec
{
    friend Probe[copy, operator+, operator[], slack];
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (type_kind
      (identifier))
    (type_declaration_head
      (identifier))
    (class_body
      (friend_declaration
        (type_name
          (identifier))
        (identifier)
        (overloadable_operator)
        (identifier)))))
